public interface Controllable {
    void open();
    void close();
    void investigateSituation();
}
