public class Light extends Appliance {
    public void specialLights(){
        System.out.println("Special lights are so colorful !");
    }
}
