public class SecuritySystem extends Appliance {
    public void alarmAlert(){
        System.out.println("Alarms are ringing !");
    }

    public void checkCameras(){
        System.out.println("Cameras are scanning the place");
    }
}
