public class Thermostat extends Appliance {
    public void adjustTemparature(){
        System.out.println("Temparature is getting adjusted.");
    }
}
