@startuml
interface Controllable{
    +open()
    +close()
    +investigateSituation()
}

class Appliance{
}

class Light{
    +specialLights()
}

class Thermostat{
    +adjustTemparature()
}

class SecuritySystem{
    +alarmAlert()
    +checkCameras()
}

Appliance .-up-|> Controllable :  <<implements>>
Light -up-|> Appliance : <<inheritance>>
Thermostat -up-|> Appliance : <<inheritance>>
SecuritySystem -up-|> Appliance : <<inheritance>>

hide empty members
@enduml